# founder-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
founder-skills/agents/: competitive-positioning.md  deck-review.md  financial-model-review.md  ic-sim.md  market-sizing.md
founder-skills/references/: israel-guidance.md
founder-skills/scripts/: founder_context.py
founder-skills/skills/competitive-positioning/: SKILL.md
founder-skills/skills/competitive-positioning/references/: artifact-schemas.md  checklist-criteria.md
founder-skills/skills/competitive-positioning/scripts/: checklist.py  compose_report.py  score_moats.py  score_positioning.py  validate_landscape.py  visualize.py
founder-skills/skills/deck-review/: SKILL.md
founder-skills/skills/deck-review/scripts/: checklist.py  compose_report.py  visualize.py
founder-skills/skills/financial-model-review/: SKILL.md
founder-skills/skills/financial-model-review/scripts/: checklist.py  (+9 more)
founder-skills/skills/ic-sim/: SKILL.md
founder-skills/skills/market-sizing/: SKILL.md
founder-skills/tests/: test_competitive_positioning.py  test_deck_review.py  test_explore.py  test_financial_model_review.py  test_founder_context.py  test_ic_sim.py  test_market_sizing.py  test_validate_inputs.py  test_verify_review.py  test_visualize_competitive_positioning.py  test_visualize_deck_review.py  test_visualize_financial_model_review.py  test_visualize_ic_sim.py  test_visualize_market_sizing.py
static/: install-claude-desktop.html
(+9 files in other folders)
